2013-09-21 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.h
	* Modules/Parsers/ProjectCenter/PCParser.m
	Transition count/length variables to NSUInteger

2013-09-21 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.m
	Fix parser check for temrination, do not look past last char.

	* PCAppController.m
	If filename is not absolute, normalize it (happens when invoking with the filename as argument to the application, e.g. 'ProjectCenter myProject').

2013-09-20 Riccardo Mottola <rm@gnu.org>

	* Framework/PCFileCreator.m
	Do not launch replacing if copying was not successful, avoids hang of app.

2013-09-17 Riccardo Mottola <rm@gnu.org>

	* Modules/Projects/ResourceSet/PCResourceSetProject.m
	Replace deprecated make variable.

	* Framework/PCProjectBuilder.m
	Fix int vs. float.

2013-02-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Framework/PCFileNameIcon.m
	* unsigned int -> NSDragOperation

2013-02-10: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Framework/PCProjectInspector.m
	* Modules/Editors/ProjectCenter/SyntaxDefinition.m
	* Modules/Editors/ProjectCenter/SyntaxHighlighter.m
	* Modules/Editors/ProjectCenter/TextPattern.m
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	  some more (unsigned) int -> NS(U)Integer transitions
	  and some shutup of clang compiler warnings
	* Framework/PCProjectBrowser.m
	* Framework/PCSaveModified.m
	* Framework/PCProjectLoadedFiles.m
	* Framework/PCProjectBuilder.m
	* Headers/ProjectCenter/PCProjectBrowser.h
	* Headers/ProjectCenter/PCSaveModified.h
	* Headers/ProjectCenter/PCProjectLoadedFiles.h
	* Modules/Projects/Application/PCAppProject+Inspector.h
	* Modules/Projects/Application/PCAppProject+Inspector.m
	  some more (unsigned) int -> NS(U)Integer transitions
	  not catched from clang, but found by libobjc2 in debug mode

2013-02-09 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Framework/PCFileCreator.m
	* Framework/PCMakefileFactory.m