@@ -1,3 +1,8 @@
+2013-09-22 Riccardo Mottola <rm@gnu.org>
+
+	* Modules/Parsers/ProjectCenter/PCParser.m
+	Do not advance start and get startType if we are at the end anyway.
+
 2013-09-21 Riccardo Mottola <rm@gnu.org>
 
 	* Modules/Parsers/ProjectCenter/PCParser.h
